crates/testing/sysml-spec-tests/tests/snapshots/identity_invariants__reparse_stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/identity_invariants.rs
assertion_line: 371
expression: bundle
---
{
  "fixture": "stdlib_base",
  "only_in_a": [],
  "only_in_b": [],
  "parse_a": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "parse_b": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "shared": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ]
}
